--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,14 @@
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "jsx": "preserve",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "lib": [
+      "es6",
+      "dom",
+      "es2016",
+      "es2017"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -25,6 +30,14 @@
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5"
   },
-  "exclude": ["build", "dist", "example", "node_modules", "rollup.config.js"],
-  "include": ["src"]
+  "exclude": [
+    "build",
+    "dist",
+    "example",
+    "node_modules",
+    "rollup.config.js"
+  ],
+  "include": [
+    "src"
+  ]
 }
