--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,9 @@
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "jsx": "preserve",
-    "lib": [
-      "es6",
-      "dom",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -30,14 +25,6 @@
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5"
   },
-  "exclude": [
-    "build",
-    "dist",
-    "example",
-    "node_modules",
-    "rollup.config.js"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["build", "dist", "example", "node_modules", "rollup.config.js"],
+  "include": ["src"]
 }
