--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "cross-env": "^6.0.3",
+    "fast-equals": "^2.0.0",
     "gh-pages": "^2.1.1",
     "prettier": "^1.18.2",
     "react": "^16.10.2",
